# ECB-scraper

./: .flake8  README.md  pyproject.toml  tests.ipynb
ecb_scraper/: __init__.py  cli.py  config.py  scraper.py
