[tool.poetry]
name = "ecb-scraper"
version = "0.1.1"
description = "Scraper for ECB press conferences"
authors = ["Thomas Kientz <thomas@kientz.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
numexpr = "^2.9.0"
tqdm = "^4.66.1"
requests = "^2.31.0"

[tool.poetry.scripts]
ecb-scraper = "ecb_scraper.cli:main"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
